--- a/Lab Projects/Jayaraman/True_CX_one_hop.ipynb
+++ b/Lab Projects/Jayaraman/True_CX_one_hop.ipynb
@@ -340,7 +340,7 @@
    "outputs": [],
    "source": [
     "# download the results by running this cell. \n",
-    "# The file will be saved in whatever file this jupyter notebook file is stored in. \n",
+    "# The file will be saved in whatever file this jupyter notebook file is stored in. (If run in MyBinder, will be in Jupyter Notebook file navigator)  \n",
     "# The red text below will be the name that this file is saved as, so you can change it to whatever name you need. \n",
     "\n",
     "final_df.to_csv('TrueCX1Hop.csv', sep=',')"
