--- a/NeuPrint Files/NeuPrint Python Files/NeuPrint_Network_Creation.ipynb
+++ b/NeuPrint Files/NeuPrint Python Files/NeuPrint_Network_Creation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__This script enables one to extract connectivity information from the NeuPrint API (https://neuprint.janelia.org/) for the purpose of creating a gexf network file. The gexf format allows each node to possess additional label information that might include its voxel size, brain region RIOs (regions of interest), net connectivity weight, etc. Once the gexf file has been generated, it can be viewed and manipulated using the robust tools of the program Gephi (https://gephi.org/)__ \n",
+    "__This script enables one to extract connectivity information from the NeuPrint API (https://neuprint.janelia.org/) for the purpose of creating a gexf network file. The gexf format allows each node to possess additional label information that might include its voxel size, brain region ROIs (regions of interest), net connectivity weight, etc. Once the gexf file has been generated, it can be viewed and manipulated using the robust tools of the program Gephi (https://gephi.org/)__ \n",
     "\n",
     "___Inputs___ <br>\n",
     "_FIBSEM ID LIST_: list type; the list should consist of hemibrain Body IDs (from NeuPrint), seperated by commas <br>\n",
